ghc-4335c07/testsuite/tests/typecheck/should_compile/Tc266a.hs
module Tc266a where
import {-# SOURCE #-} Tc266
