ghc-4335c07/testsuite/tests/typecheck/should_fail/T12063a.hs
module T12063a where
import {-# SOURCE #-} T12063
type S = T
